--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body style="background-color: #1abc9c">
-	<h1 style="padding-top: 20%; text-align: center">Location de voiture ancienne</h1>
+	<h1 style="padding-top: 20%; text-align: center; color:#FFFFFF">Location de voiture ancienne</h1>
 
 </body>
 </html>
